   * Lua errors now cause as a condition to fail instead of pass.
   * New formula= key in [set_variable] allows evaluating a WFL formula with
     the variable, which may be either a scalar or a container.
   * A missing [event] name= key will now raise a WML error instead of being
     silently ignored.
 * Miscellaneous and bug fixes:
   * Fixed crash after canceling add-on download (bug #2203)
   * Fixed ingame help showing units you haven't encountered (bug #2135)
   * Fixed the opacity IPF resetting to 0 if the value given was 100% or
     greater (bug #2185).
   * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
     (bug #2196)
   * Fixed not being able to undo previous moves after entering planning mode
     (bug #2303)
   * Fixed image cache being shared between campaigns.

Version 1.13.10:
 * Add-ons client:
   * A list of illegal filenames is displayed if any are found by the server
     when uploading.
 * Add-ons server:
   * A list of illegal filenames is sent to the client if any are found during
     the upload validation process. Only clients supporting this new
     functionality can display the list.
   * Fix an issue where the implementation of the hashing function used for
     add-on passphrases was changed since 1.13.8, breaking existing hashes
     (bug #2068).
 * Campaigns:
   * Delfador's Memoirs:
     * Clarified and fixed objectives in many places.
     * Improved appearance and flow of dialog in several places.
     * Some minor gameplay changes to improve the story.
     * Delfador now progresses properly from Mage Journeyman to Elder Mage.
     * Fixed some other bugs.
     * S07, A Night in the Swamp has been rebalanced on easy & hard.
     * S09, Houses of the Dead, has been rebalanced.
     * S18, The Portal of Doom, has been rebalanced.
     * Iliah-Malal is now an Ancient Lich in S18 & 19.
 * Language and i18n:
   * Updated translations: British English
 * Lua API:
   * Upgrade to Lua 5.3.4.