@@ -26,6 +26,7 @@ Version 1.13.11:
    * Miscellaneous low-level optimizations in game rendering code, improving
      performance ingame by up to 50 %.
  * Miscellaneous and bug fixes:
+   * Suggested save file names now use spaces instead of underscores.
    * Fixed crash after canceling add-on download (bug #2203)
    * Fixed ingame help showing units you haven't encountered (bug #2135)
    * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
