@@ -108,6 +108,3 @@ private:
 
 extern save_index_class save_index_manager;
 } // end of namespace savegame
-
-void replace_underbar2space(std::string& name);
-void replace_space2underbar(std::string& name);
